--- a/css/menu.css
+++ b/css/menu.css
@@ -21,6 +21,11 @@ body {}
 }
 
 #formatacao :hover {
-    background: #4a148c;
+    background: #b71c1c;
     transition: 1s;
+}
+
+ul :hover {
+    color: black;
+    font-size: 20px;
 }
