--- a/css/logado.css
+++ b/css/logado.css
@@ -3,23 +3,37 @@
     padding: 0;
 }
 
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @font-face {
     font-family: Ailerons;
     src: url(../fontes/andrrs/Anders.ttf);
 }
-.background1{
+
+body {
+    background-attachment: fixed;
+    background-image: url(../img/contatobk.jpg);
+    background-color: rgba(58, 29, 85, 0.7);
+    
+
+}
+
+.background1 {
+    background-attachment: fixed;
     background-image: url(../img/contatobk.jpg);
     width: 1920px;
     height: 1080px;
-}
-.background2{
-background-color: rgba(58, 29, 85, 0.7);
-    width: 1920px;
-    height: 1080px;
-
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
-#formatacao {
+.background2 {
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: absolute;
+    background-color: rgba(58, 29, 85, 0.7);
+    width: 100%;
+    height: 2500px;
 }
 
 .tamanho {
@@ -29,14 +43,16 @@ background-color: rgba(58, 29, 85, 0.7);
 ul :hover {
     color: rgb(255, 253, 253);
 }
-nav{
+
+nav {
     height: 90px;
     text-decoration: none;
 }
 
-.itens-nav{
+.itens-nav {
     padding-top: 30px;
 }
+
 .title_menu {
     font-size: 40px;
     font-family: Ailerons;
@@ -47,18 +63,106 @@ nav{
     font-size: 50px;
     margin-left: 35%;
 }
-.itens-menu{
+
+.itens-menu {
     font-size: 20px;
     color: #ccc;
-   
 }
-.itens-menu2{
+
+.itens-menu2 {
     font-size: 20px;
     color: #ccc;
-   }
-.itens-menu:hover{
+}
+
+.itens-menu:hover {
     color: white;
     border-bottom: 1px solid red;
+}
 
+.title-page {
+    font-family: Ailerons;
+    font-size: 90px;
+    color: #b71c1c;
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 100px;
+}
+h1::after{
+    color: #ff2828;
+    content: '|';
+    margin-left: 5px;
+    opacity: 1;
+    animation: pisca .7s infinite;
+}
+    @keyframes pisca {
+        0%, 100%{
+            opacity: 1;
+        }
+        50%{
+            opacity:0;
+        }
+    }
+.subtitulo-page {
+    font-size: 40px;
+    color: rgb(214, 210, 210);
+    text-align: left;
+    margin-bottom: 70px;
+    font-family: 'Roboto Mono', monospace;
+    border-bottom: 2px solid white;
+}
 
+.container-filmes {
+    width: 250px;
+    height: 400px;
+}
+
+.area-filmes {
+    margin-left: 5%;
+    margin-top: 2%;
+    background-size: 100%;
+    width: 220px;
+    height: 330px;
+    border-radius: 4px;
+}
+
+.title-filme {
+    color: white;
+    font-size: 25px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    text-align: center;
+}
+.materialboxed{
+    border-radius: 5px;
+}
+.materialboxed:hover{
+    color: #b71c1c;
+}
+
+@media only screen and (max-width: 1100px) {
+    .title_menu {
+        font-size: 20px;
+    }
+    .title-page {
+        font-family: Ailerons;
+        font-size: 30px;
+        color: #b71c1c;
+        text-align: center;
+        margin-top: 60px;
+        margin-bottom: 100px;
+    }
+    
+    .posicao-menu {
+        font-size: 50px;
+        margin-left: 20%;
+    } 
+}
+.subtitulo-page2{
+    font-size: 25px;
+    color: rgb(214, 210, 210);
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 0px;
+    font-family: 'Roboto Mono', monospace;
+    border-bottom: 2px solid white;
 }
