--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -8,29 +8,30 @@
     src: url(../fontes/andrrs/Anders.ttf);
 }
 
-body {
-   
-}
-.background1{
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+.background1 {
     background-image: url(../img/contatobk.jpg);
     width: 1920px;
     height: 1080px;
 }
-.background2{
-background-color: rgba(58, 29, 85, 0.7);
+
+.background2 {
+    background-color: rgba(58, 29, 85, 0.7);
     width: 1920px;
     height: 1080px;
-
 }
 
-nav{
+nav {
     height: 90px;
     text-decoration: none;
 }
 
-.itens-nav{
+.itens-nav {
     padding-top: 30px;
+    font-family: 'Roboto', sans-serif;
 }
+
 .title_menu {
     font-size: 40px;
     font-family: Ailerons;
@@ -41,17 +42,17 @@ nav{
     font-size: 50px;
     margin-left: 35%;
 }
-.itens-menu{
+
+.itens-menu {
     font-size: 20px;
     color: #ccc;
-   
 }
-.itens-menu:hover{
+
+.itens-menu:hover {
     color: white;
     border-bottom: 1px solid red;
-
-
 }
+
 .title-page {
     font-family: Ailerons;
     font-size: 90px;
@@ -59,10 +60,72 @@ nav{
     text-align: center;
     margin-top: 60px;
 }
-.subtitulo-page{
+
+.subtitulo-page {
     font-size: 27px;
-    color: white;
+    color: rgb(207, 198, 198);
     font-weight: bold;
-    text-align: center; 
+    text-align: center;
     margin-bottom: 100px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.materialboxed {
+    cursor: default;
+}
+
+.card {
+    background-color: rgb(255, 255, 255, 0.1);
+    color: aliceblue;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+}
+
+.card-content {
+    background-color: rgb(255, 255, 255, 0.1);
+}
+
+.btn1 {
+    background-color: #eaedf0;
+    color: #340a83;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+
+.btn1:hover {
+    transition: 0.5s;
+    background-color: rgb(103, 9, 255);
+    color: rgb(255, 255, 255);
+}
+
+.btn2 {
+    background-color: #ffffff15;
+    width: 120px;
+    color: rgb(255, 255, 255);
+    font-family: 'Roboto', sans-serif;
+}
+
+.btn2:hover {
+    transition: 0.5s;
+    color: rgb(0, 0, 0);
+    background-color: #ffffff;
+    font-weight: bold;
+}
+
+h2::after {
+    color: #ff1d1d;
+    content: '|';
+    margin-left: 5px;
+    opacity: 1;
+    animation: pisca .7s infinite;
+}
+
+
+@keyframes pisca {
+    0%, 100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
 }
